--- a/Profile Card/index.html
+++ b/Profile Card/index.html
@@ -13,7 +13,7 @@
         </header>
         <div class="card-body">
             <div class="logo">
-                <img src="logo.png">
+                <img src="mine.png">
                 <h4>Who is Hooman?</h4>
             </div>
             <p>
