--- a/Carousel/index.html
+++ b/Carousel/index.html
@@ -89,3 +89,5 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js"></script>
     <script src="script.js"></script>
+</body>
+</html>
