--- a/Border and Hover/index.html
+++ b/Border and Hover/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>List Hover Effects</title>
+    <title>Border and Hover Effects</title>
     <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body>
