update: update my image

--- a/3D Rotation Effects/index.html
+++ b/3D Rotation Effects/index.html
@@ -9,9 +9,9 @@
 <body>
     <div class="banner">
         <div class="product">
-            <div class="soda" style="--url: url(assets/bg.png)"></div>
+            <div class="soda" style="--url: url(assets/mine1.PNG)"></div>
             
-            <div class="soda" style="--url: url(assets/bg2.png)"></div>
+            <div class="soda" style="--url: url(assets/mine2.PNG)"></div>
         </div>
 
         <div class="rock">
