update: update profile img

--- a/Animated Card/index.html
+++ b/Animated Card/index.html
@@ -16,7 +16,7 @@
 
         <div class="content">
             <div class="details">
-                <h2>Wukong <br><span>The Great Sage</span></h2>
+                <h2>Hoo Nam<br><span>Developer</span></h2>
                 
                 <div class="data">
                     <h3>354<br><span>Posts</span></h3>
