--- a/Sliding Effects/index.html
+++ b/Sliding Effects/index.html
@@ -7,9 +7,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div id="notice">Button clicked!</div>
     <div class="container">
         <button id="btn">Submit</button>
         <button id="btn">Submit</button>
     </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
