--- a/Zero Collision/index.html
+++ b/Zero Collision/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <div class="square">
+    <div class="container" id="container">
+        <!-- <div class="square">
             <span style="--i:0;"></span>
             <span style="--i:1;"></span>
             <span style="--i:2;"></span>
@@ -27,7 +27,9 @@
             <span style="--i:1;"></span>
             <span style="--i:2;"></span>
             <span style="--i:3;"></span>
-        </div>
+        </div> -->
     </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
