--- a/Puzzle/index.html
+++ b/Puzzle/index.html
@@ -9,51 +9,66 @@
 <body>
     <div class="drag" id="drag">
         <div class="dragBox">
-            <div class="images" draggable="true" id="block1" style="--img:url(img/1.png);">
+            <div class="images" draggable="true" ondragstart="drag(event)" id="block1" style="--img:url(img/1.png);">
             </div>
         </div>
 
         <div class="dragBox">
-            <div class="images" draggable="true" id="block2" style="--img:url(img/2.png);">
+            <div class="images" draggable="true" ondragstart="drag(event)" id="block2" style="--img:url(img/2.png);">
             </div>
         </div>
 
         <div class="dragBox">
-            <div class="images" draggable="true" id="block3" style="--img:url(img/3.png);">
+            <div class="images" draggable="true" ondragstart="drag(event)" id="block3" style="--img:url(img/3.png);">
             </div>
         </div>
 
         <div class="dragBox">
-            <div class="images" draggable="true" id="block4" style="--img:url(img/4.png);">
+            <div class="images" draggable="true" ondragstart="drag(event)" id="block4" style="--img:url(img/4.png);">
             </div>
         </div>
 
         <div class="dragBox">
-            <div class="images" draggable="true" id="block5" style="--img:url(img/5.png);">
+            <div class="images" draggable="true" ondragstart="drag(event)" id="block5" style="--img:url(img/5.png);">
             </div>
         </div>
 
         <div class="dragBox">
-            <div class="images" draggable="true" id="block6" style="--img:url(img/6.png);">
+            <div class="images" draggable="true" ondragstart="drag(event)" id="block6" style="--img:url(img/6.png);">
             </div>
         </div>
 
         <div class="dragBox">
-            <div class="images" draggable="true" id="block7" style="--img:url(img/7.png);">
+            <div class="images" draggable="true" ondragstart="drag(event)" id="block7" style="--img:url(img/7.png);">
             </div>
         </div>
 
         <div class="dragBox">
-            <div class="images" draggable="true" id="block8" style="--img:url(img/8.png);">
+            <div class="images" draggable="true" ondragstart="drag(event)" id="block8" style="--img:url(img/8.png);">
             </div>
         </div>
 
         <div class="dragBox">
-            <div class="images" draggable="true" id="block9" style="--img:url(img/9.png);">
+            <div class="images" draggable="true" ondragstart="drag(event)" id="block9" style="--img:url(img/9.png);">
             </div>
         </div>
     </div>
 
-    <button class="reset">Rest Puzzle</button>
+    <div class="board">
+        <div class="dropBox" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+        <div class="dropBox" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+        <div class="dropBox" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+        <div class="dropBox" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+        <div class="dropBox" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+        <div class="dropBox" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+        <div class="dropBox" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+        <div class="dropBox" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+        <div class="dropBox" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    </div>
+
+    <button class="reset" onclick="window.location.reload();">Rest Puzzle</button>
+
+
+    <script src="script.js"></script>
 </body>
 </html>
