update: add copy function, add more options later

--- a/Gen Pass/index.html
+++ b/Gen Pass/index.html
@@ -5,13 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pass Gen</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <div class="inputBox">
         <h2>Gen Pass</h2>
         <input type="text" name="" placeholder="Create Password" id="password" readonly="">
+        <div class="copy" onclick="copyPassword();"><i class="fa-regular fa-copy"></i></div>
         <div id="btn" onclick="getPassword();">Gen Pass</div>
     </div>
+    
+    <div class="alertBox"></div>
 
     <script src="script.js"></script>
 </body>
