--- a/Gen Pass/index.html
+++ b/Gen Pass/index.html
@@ -17,6 +17,11 @@
     
     <div class="alertBox"></div>
 
+    <div class="result" id="result">
+            
+    </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bcrypt-nodejs/0.0.3/bcrypt.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.2.0/crypto-js.min.js" integrity="sha512-a+SUDuwNzXDvz4XrIcXHuCf089/iJAoN4lmrXJg18XnduKK6YlDHNRalv4yd1N40OKI80tFidF+rqTFKGPoWFQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="script.js"></script>
 </body>
 </html>
