update: completed, add reset all later

--- a/Budget App/index.html
+++ b/Budget App/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="wrapper">
-        <div class="scontainer">
+        <div class="container">
             <div class="sub-container">
                 <div class="total-amount-container">
                     <h3>Budget</h3>
@@ -32,14 +32,14 @@
                     id="product-title"
                     placeholder="Enter Title Of Product">
                     <input type="number" id="user-amount" placeholder="Enter Cost Of Product">
-                    <button class="submit" id="check-amout">Check Amount</button>
+                    <button class="submit" id="check-amount">Check Amount</button>
                 </div>
             </div>
 
             <div class="output-container flex-space">
                 <div>
                     <p>Total Budget</p>
-                    <span id="amount"></span>
+                    <span id="amount">0</span>
                 </div>
 
                 <div>
@@ -49,7 +49,7 @@
 
                 <div>
                     <p>Balance</p>
-                    <span id="balance-amount"></span>
+                    <span id="balance-amount">0</span>
                 </div>
             </div>
         </div>
