--- a/Pixel Art/index.html
+++ b/Pixel Art/index.html
@@ -12,14 +12,14 @@
             <div class="opt-wrapper">
                 <div class="slider">
                     <label for="width-range">Grid Width</label>
-                    <input type="range" id="width-range" min="1" max="1">
+                    <input type="range" id="width-range" min="1" max="60">
                     <span id="width-value">00</span>
                 </div>
 
                 <div class="slider">
-                    <label for="width-range">Grid Height</label>
-                    <input type="range" id="height-range" min="1" max="1">
-                    <span id="width-value">00</span>
+                    <label for="height-range">Grid Height</label>
+                    <input type="range" id="height-range" min="1" max="60">
+                    <span id="height-value">00</span>
                 </div>
             </div>
 
@@ -35,6 +35,6 @@
         <div class="container"></div>
     </div>
 
-
+    <script src="script.js"></script>
 </body>
 </html>
