update: add notfound img, main + modal styles

--- a/AI Image Detector/index.html
+++ b/AI Image Detector/index.html
@@ -17,11 +17,11 @@
                 <button id="uploadButton">Analyze Image</button>
             </div>
 
-            <img src="" class="imagePreview">
+            <img src="assets/not-found.jpg" class="imagePreview">
         </div>
         
         
-        <div class="colors-contaier">
+        <div class="colors-container">
             <p class="error">Nothing to show...</p>
         </div>
     </div>
