--- a/Gemini Clone/index.html
+++ b/Gemini Clone/index.html
@@ -53,6 +53,14 @@
                     <i class="bx bx-wrench"></i>
                 </div>
             </div>
+
+            <div class="suggests__item">
+                <p class="suggests__item-text">Show me some tips</p>
+
+                <div class="suggests__item-icon">
+                    <i class="bx bx-wrench"></i>
+                </div>
+            </div>
         </div>
     </header>
 
@@ -76,7 +84,7 @@
     </section>
 
     
-    <script src="https://cdn.jsdelivr.net/npm/markedk/marked.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
     <script src="script.js"></script>
 </body>
