--- a/Date Count/index.html
+++ b/Date Count/index.html
@@ -38,28 +38,7 @@
                 <span>Sat</span>
             </div>
 
-            <div class="calendar-days">
-                <div>1
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                </div>
-                <div>2</div>
-                <div>3</div>
-                <div>4</div>
-                <div>5</div>
-                <div>6</div>
-                <div>7</div>
-                <div>1</div>
-                <div>2</div>
-                <div>3</div>
-                <div>4</div>
-                <div>5</div>
-                <div>6</div>
-                <div>7</div>
-
-            </div>
+            <div class="calendar-days"> </div>
         </div>
 
         <div class="calendar-footer">
