--- a/Date Count/index.html
+++ b/Date Count/index.html
@@ -53,6 +53,7 @@
 
         <div class="month-list"></div>
     </div>
+    <button id="dayButton">Click me for date info</button>
 
     <script src="script.js"></script>
 </body>
