--- a/Date Count/index.html
+++ b/Date Count/index.html
@@ -53,7 +53,13 @@
 
         <div class="month-list"></div>
     </div>
-    <button id="dayButton">Click me for date info</button>
+    
+    <div class="date-result">
+        <span class="date-1">Ngày 1:</span>
+        <span class="date-2">Ngày 2:</span>
+        <span class="date-range">Date range:</span>
+    </div>
+    <button class="dayButton" onclick="resetAll();"> Click me to reset </button>
 
     <script src="script.js"></script>
 </body>
