--- a/Date Count/index.html
+++ b/Date Count/index.html
@@ -59,7 +59,7 @@
         <span class="date-2">Ngày 2:</span>
         <span class="date-range">Date range:</span>
     </div>
-    <button class="dayButton" onclick="resetAll();"> Click me to reset </button>
+    <button class="resetButton" onclick="resetAll();"> Click me to reset </button>
 
     <script src="script.js"></script>
 </body>
