update: responsive, zooom in bug

--- a/Date Count/index.html
+++ b/Date Count/index.html
@@ -52,7 +52,7 @@
             </div>
         </div>
 
-        <div class="month-list"></div>
+        <div class="month-list hide"></div>
     </div>
     
     <div class="date-result">
