update: todo-toggle (switch mode)

--- a/Date Count/index.html
+++ b/Date Count/index.html
@@ -13,8 +13,7 @@
 
 <body class="light">
     <div class="header">
-        <h1>Date Count</h1>
-        <button class="alert-toggle">click me</button>
+        <h1 class="toggle-todo">Date Count</h1>
     </div>
 
     <div class="calendar">
