update: prevent 2 click header

--- a/Date Count/index.html
+++ b/Date Count/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body class="light">
-    <div class="header">
+    <div class="header" id="clickableDiv">
         <h1 class="toggle-todo">Date Count</h1>
     </div>
 
