update: header, toggle body affect to header, effects

--- a/Date Count/index.html
+++ b/Date Count/index.html
@@ -11,7 +11,7 @@
 
 </head>
 
-<body class="light">
+<body class="light date-count">
     <div class="header" id="clickableDiv">
         <h1 class="toggle-todo">Date Count</h1>
     </div>
