update: body change by mode

--- a/Date Count/index.html
+++ b/Date Count/index.html
@@ -51,7 +51,7 @@
         <div class="calendar-footer">
             <div class="toggle">
                 <i class="fa-solid fa-moon"></i>
-                <span>Dark Mode</span>
+                <span class="mode-text">Dark Mode</span>
                 <div class="dark-mode-switch">
                     <div class="dark-mode-switch-ident"></div>
                 </div>
