update: hover with spec time demo, use later

--- a/Date Count/index.html
+++ b/Date Count/index.html
@@ -79,6 +79,10 @@
 
     </div>
 
+    <div class="hover-box" id="hover-box">
+        Di chuột vào đây trong 2 giây
+    </div>
+
     <script> window.alert = function() { }; </script>
     <script src="script.js"></script>
 </body>
