--- a/Date Count/index.html
+++ b/Date Count/index.html
@@ -46,16 +46,7 @@
                 <span>Sat</span>
             </div>
 
-            <div class="calendar-days">
-                <div id="context-menu" class="context-menu">
-                    <ul>
-                        <li onclick="alert('New Tab')">Mở Tab Mới</li>
-                        <li onclick="alert('Reload')">Tải lại</li>
-                        <li onclick="alert('Back')">Quay lại</li>
-                        <li onclick="alert('Inspect')">Kiểm tra phần tử</li>
-                        <li onclick="alert('Settings')">Cài đặt</li>
-                    </ul>
-                </div>
+            <div class="calendar-days" id="calendar-days">
             </div>
         </div>
 
@@ -93,28 +84,19 @@
         Di chuột vào đây trong 2 giây
     </div>
 
-    <!-- <div class="content">
-        <p id="right-click-text">Hãy nhấp chuột phải vào văn bản này để xem menu tùy chọn.</p>
-        <img id="right-click-image" src="https://via.placeholder.com/150" alt="Placeholder Image">
-    </div>
-    
-    <div class="content">
-        <p>Hãy nhấp chuột phải để xem menu tùy chọn.</p>
-    </div> -->
-    <!-- Custom Context Menu -->
     <div id="context-menu" class="context-menu">
         <ul>
-            <li onclick="alert('New Tab')">Mở Tab Mới</li>
+            <!-- <li onclick="alert('New Tab')">Mở Tab Mới</li>
             <li onclick="alert('Reload')">Tải lại</li>
             <li onclick="alert('Back')">Quay lại</li>
             <li onclick="alert('Inspect')">Kiểm tra phần tử</li>
-            <li onclick="alert('Settings')">Cài đặt</li>
+            <li onclick="alert('Settings')">Cài đặt</li> -->
             <li onabort="alert('ManageEvent')">Quản lý sự kiện</li>
             
         </ul>
     </div>
 
-    <!-- <script> window.alert = function() { }; </script> -->
+    <script> window.alert = function() { }; </script>
     <script src="script.js"></script>
 </body>
 </html>
