update: event form, color event type

--- a/Date Count/index.html
+++ b/Date Count/index.html
@@ -90,7 +90,7 @@
 
     <!-- <div id="modal" class="modal">
          -->
-         <div id="modal" class="modal show" style="display: flex;">
+        <div id="modal" class="modal show" style="display: flex;">
         <div class="modal-content">
             <span id="closeBtn" class="close">&times;</span>
             <h2>Đăng ký</h2>
@@ -137,19 +137,20 @@
                     <textarea id="event-participants" name="participants" placeholder="abc@example.com, xyz@example.com"></textarea>
                 </div>
 
-                <div class="event-type">
+                <div class="event-type event-type-color">
                     <label for="event-color"><span>Màu sắc:</span></label>
-                    
+
                     <div class="color-options">
                         <div class="color-option color-default selected" data-color="#1a73e8"></div>
-                        <div class="color-option color-red" data-color="#d50000"></div>
+                        <i class="fa fa-caret-down" aria-hidden="true"></i>
+                        <!-- <div class="color-option color-red" data-color="#d50000"></div>
                         <div class="color-option color-orange" data-color="#f4511e"></div>
                         <div class="color-option color-yellow" data-color="#f6bf26"></div>
                         <div class="color-option color-green" data-color="#0b8043"></div>
                         <div class="color-option color-teal" data-color="#009688"></div>
                         <div class="color-option color-blue" data-color="#3f51b5"></div>
                         <div class="color-option color-purple" data-color="#8e24aa"></div>
-                        <div class="color-option color-pink" data-color="#e67c73"></div>
+                        <div class="color-option color-pink" data-color="#e67c73"></div> -->
                     </div>    
                 </div>
                 
