--- a/Date Count/index.html
+++ b/Date Count/index.html
@@ -142,15 +142,19 @@
 
                     <div class="color-options">
                         <div class="color-option color-default selected" data-color="#1a73e8"></div>
-                        <i class="fa fa-caret-down" aria-hidden="true"></i>
-                        <!-- <div class="color-option color-red" data-color="#d50000"></div>
-                        <div class="color-option color-orange" data-color="#f4511e"></div>
-                        <div class="color-option color-yellow" data-color="#f6bf26"></div>
-                        <div class="color-option color-green" data-color="#0b8043"></div>
-                        <div class="color-option color-teal" data-color="#009688"></div>
-                        <div class="color-option color-blue" data-color="#3f51b5"></div>
-                        <div class="color-option color-purple" data-color="#8e24aa"></div>
-                        <div class="color-option color-pink" data-color="#e67c73"></div> -->
+                        <i class="fa fa-caret-down" aria-hidden="true" id="toggle-colors"></i>
+
+                        <div class="hidden-colors" style="display: none;">
+                            <div class="color-option color-red" data-color="#d50000"></div>
+                            <div class="color-option color-orange" data-color="#f4511e"></div>
+                            <div class="color-option color-yellow" data-color="#f6bf26"></div>
+                            <div class="color-option color-green" data-color="#0b8043"></div>
+                            <div class="color-option color-teal" data-color="#009688"></div>
+                            <div class="color-option color-blue" data-color="#3f51b5"></div>
+                            <div class="color-option color-purple" data-color="#8e24aa"></div>
+                            <div class="color-option color-pink" data-color="#e67c73"></div>
+                        </div>
+                       
                     </div>    
                 </div>
                 
