update: color option

--- a/Date Count/index.html
+++ b/Date Count/index.html
@@ -144,8 +144,8 @@
                         <div class="color-option color-default selected" data-color="#1a73e8"></div>
                         <i class="fa fa-caret-down" aria-hidden="true" id="toggle-colors"></i>
 
-                        <div class="hidden-colors" style="display: none;">
-                            <div class="color-option color-red" data-color="#d50000"></div>
+                        <div class="hidden-colors" style="display: inline-block;">
+                            <span class="test"><div class="color-option color-red" data-color="#d50000"></div></span>
                             <div class="color-option color-orange" data-color="#f4511e"></div>
                             <div class="color-option color-yellow" data-color="#f6bf26"></div>
                             <div class="color-option color-green" data-color="#0b8043"></div>
