update: color option

--- a/Date Count/index.html
+++ b/Date Count/index.html
@@ -114,24 +114,6 @@
                     <input type="time" id="event-time" name="time" required>
                 </div>
 
-                <!-- <div class="event-type">
-                    <label for="event-category"><span>Loại sự kiện:</span></label>
-                    <div class="event-category">
-
-                        <div class="event-category-btn">
-                            <span>Chọn loại sự kiện</span>
-                        </div>
-                        
-                        <ul class="event-category-menu">
-                            <li class="event-category-item" data-value="meeting"><span>Họp</span></li>
-                            <li class="event-category-item" data-value="birthday"><span>Sinh nhật</span></li>
-                            <li class="event-category-item" data-value="appointment"><span>Cuộc hẹn</span></li>
-                            <li class="event-category-item" data-value="other"><span>Khác</span></li>
-                        </ul>
-                    </div>
-                    
-                </div> -->
-
                 <div class="event-type">
                     <label for="event-participants"><span>Người tham gia (Email):</span></label>
                     <textarea id="event-participants" name="participants" placeholder="abc@example.com, xyz@example.com"></textarea>
@@ -145,7 +127,7 @@
                         <i class="fa fa-caret-down" aria-hidden="true" id="toggle-colors"></i>
 
                         <div class="hidden-colors" style="display: inline-block;">
-                            <span class="test"><div class="color-option color-red" data-color="#d50000"></div></span>
+                            <div class="color-option color-red" data-color="#d50000"></div>
                             <div class="color-option color-orange" data-color="#f4511e"></div>
                             <div class="color-option color-yellow" data-color="#f6bf26"></div>
                             <div class="color-option color-green" data-color="#0b8043"></div>
