--- a/Date Count/index.html
+++ b/Date Count/index.html
@@ -126,7 +126,7 @@
                         <div class="color-option color-default selected" data-color="#1a73e8"></div>
                         <i class="fa fa-caret-down" aria-hidden="true" id="toggle-colors"></i>
 
-                        <div class="hidden-colors" style="display: inline-block;">
+                        <div class="hidden-colors" style="display: none;">
                             <div class="color-option color-red" data-color="#d50000"></div>
                             <div class="color-option color-orange" data-color="#f4511e"></div>
                             <div class="color-option color-yellow" data-color="#f6bf26"></div>
@@ -142,13 +142,15 @@
                 
                 <div class="event-type">
                     <label for="event-repeat"><span>Lặp lại:</span></label>
-                    <select id="event-repeat" name="repeat">
-                        <option value="none">Không</option>
-                        <option value="daily">Hàng ngày</option>
-                        <option value="weekly">Hàng tuần</option>
-                        <option value="monthly">Hàng tháng</option>
-                    </select>
-                </div>                           
+
+                    <div class="event-repeat-options">
+                        <div class="event-repeat-option selected" data-value="none">Không</div>
+                        <div class="event-repeat-option" data-value="daily">Hàng ngày</div>
+                        <div class="event-repeat-option" data-value="weekly">Hàng tuần</div>
+                        <div class="event-repeat-option" data-value="monthly">Hàng tháng</div>
+                        <div class="event-repeat-option" data-value="yearly">Hàng năm</div>
+                    </div>
+                </div>
               
                 <div class="event-type">
                     <label for="event-description"><span>Mô tả:</span></label>
