update: repeat-event

--- a/Date Count/index.html
+++ b/Date Count/index.html
@@ -147,13 +147,12 @@
                         <div class="repeat-option selected" data-value="none">Chọn thời gian</div>
                         <i class="fa-solid fa-repeat" aria-hidden="true" id="event-repeat-select"></i>
 
-                        <div class="hidden-event" style="display: none;">
-                            <div class="repeat-option" data-value="none">Không lặp lại</div>
-                            <div class="repeat-option" data-value="none">Không</div>
-                            <div class="repeat-option" data-value="daily">Hàng ngày</div>
-                            <div class="repeat-option" data-value="weekly">Hàng tuần</div>
-                            <div class="repeat-option" data-value="monthly">Hàng tháng</div>
-                            <div class="repeat-option" data-value="yearly">Hàng năm</div>
+                        <div class="hidden-event" style="display: inline-block;">
+                            <div class="repeat-option" data-value="none"><span>Không lặp lại</span></div>    
+                            <div class="repeat-option" data-value="daily"><span>Hàng ngày</span></div>
+                            <div class="repeat-option" data-value="weekly"><span>Hàng tuần</span></div>
+                            <div class="repeat-option" data-value="monthly"><span>Hàng tháng</span></div>
+                            <div class="repeat-option" data-value="yearly"><span>Hàng năm</span></div>
                         </div>
                     </div>
                 </div>
