--- a/Date Count/index.html
+++ b/Date Count/index.html
@@ -117,6 +117,12 @@
                     <div class="event-type event-email">
                         <label for="email-participants"><span>Người tham gia (Email):</span></label>
                         <textarea class="email-input" id="email-participants" name="participants" placeholder="abc@example.com, xyz@example.com"></textarea>
+                        <div class="tooltip">
+                            <i class="fa-solid fa-question"></i>
+                            <div class="tooltip-text">
+                            Enter email addresses separated by commas. Example: user1@example.com, user2@example.com
+                            </div>
+                        </div>
                         <p id="warning-message" style="color: red; display: none;">Email must be in correctly type</p>
 
                         <div class="email-popup" style="display: none;">
