update: event participants capture and list

--- a/Date Count/index.html
+++ b/Date Count/index.html
@@ -129,7 +129,9 @@
                             <div class="email-popup-content">
                                 <span class="popup-close">&times;</span>
                                 <p>Người tham gia:</p>
-                                <ul id="email-list"></ul>
+                                <ul id="email-list">
+                                    <li class="email-item">test@test.com</li>
+                                </ul>
                             </div>
                         </div>
                     </div>
