update: participants email

--- a/Date Count/index.html
+++ b/Date Count/index.html
@@ -127,13 +127,23 @@
 
                         <div class="email-popup" style="display: none;">
                             <div class="email-popup-content">
-                                <span class="popup-close">&times;</span>
                                 <p>Người tham gia:</p>
                                 <ul id="email-list">
                                     <li class="email-item">test@test.com</li>
                                 </ul>
                             </div>
                         </div>
+
+                        <div class="email-introduce-popup" style="display: none;">
+                            <div class="participants-popup-content">
+                                Enter to capture email addresses  
+
+                                <div class="close-email-popup">
+                                    Close
+                                </div>
+                            </div>
+                        </div>
+                        
                     </div>
 
                 <div class="event-type event-type-color">
