update: sessionStorage to prevent multi popup

--- a/Date Count/index.html
+++ b/Date Count/index.html
@@ -88,8 +88,8 @@
         </ul>
     </div>
 
-    <!-- <div id="modal" class="modal">
-         -->
+    <!-- <div id="modal" class="modal"> -->
+        
         <div id="modal" class="modal show" style="display: flex;">
         <div class="modal-content">
             <span id="closeBtn" class="close">&times;</span>
