--- a/Date Count/index.html
+++ b/Date Count/index.html
@@ -83,14 +83,14 @@
 
     <div id="context-menu" class="context-menu">
         <ul>
-            <li onclick="manageEvent();" onabort="alert('ManageEvent')">Quản lý sự kiện</li>
-            
+            <!-- <li onclick="manageEvent();" onabort="alert('ManageEvent')">Quản lý sự kiện</li> -->
+            <li id="manageEvent" onabort="alert('ManageEvent')">Quản lý sự kiện</li>
         </ul>
     </div>
 
-    <!-- <div id="modal" class="modal"> -->
+    <div id="modal" class="modal">
         
-        <div id="modal" class="modal show" style="display: flex;">
+        <!-- <div id="modal" class="modal show" style="display: flex;"> -->
         <div class="modal-content">
             <span id="closeBtn" class="close">&times;</span>
             <h2>Đăng ký</h2>
@@ -200,7 +200,7 @@
     <script> window.alert = function() { }; </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.2.0/crypto-js.min.js" integrity="sha512-a+SUDuwNzXDvz4XrIcXHuCf089/iJAoN4lmrXJg18XnduKK6YlDHNRalv4yd1N40OKI80tFidF+rqTFKGPoWFQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
-    <!-- <script type="module" src="js/main.js"></script> -->
-    <script src="script.js"></script>
+    <script type="module" src="js/main.js"></script>
+    <!-- <script src="script.js"></script> -->
 </body>
 </html>
