update: update picked class style, add reset storage, set date in form logic later, remove special date later

--- a/Date Count/index.html
+++ b/Date Count/index.html
@@ -77,8 +77,12 @@
     <div class="button">
         <!-- <button class="resetButton" onclick="resetAll();"> Click me to reset </button> -->
         <button class="resetButton">Click me to reset</button>
-
     </div>
+
+    <div class="dateReset">
+        <button class="resetButton date">Click me to reset all selected date</button>
+    </div>
+
 
 
     <div id="context-menu" class="context-menu">
