update: backtoday btn logic bug, set date in form logic later, remove special date(remove event has been set) later

--- a/Date Count/index.html
+++ b/Date Count/index.html
@@ -51,6 +51,8 @@
         </div>
 
         <div class="calendar-footer">
+            <!-- <div class="today-info" style="visibility: hidden;"> -->
+            <!-- <div class="today-info" style="pointer-events: none;"> -->
             <div class="today-info">
                 <i class="fa fa-undo"></i>
                 <span class="undo-date">Back today</span>
