--- a/Date Count/index.html
+++ b/Date Count/index.html
@@ -85,6 +85,10 @@
         <button class="resetButton date">Click me to reset all selected date</button>
     </div>
 
+    <div class="api-button">
+        <button class="resetButton" id="apiButton">API</button>
+    </div>
+
 
 
     <div id="context-menu" class="context-menu">
