update: update api

--- a/Pokemon API Practice/index.html
+++ b/Pokemon API Practice/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <div class="image-container">
+        <input type="text" id="poke-name" placeholder="Enter image name here:">
+
         <!-- Loading text will show while image is being fetched -->
         <p id="loading-text">Loading...</p>
         <img id="image" class="lazy" data-src="" src="" alt="Image">
