update: creating display details

--- a/Pokemon API Practice/index.html
+++ b/Pokemon API Practice/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lazy Load Image with Loading Text</title>
     <link rel="stylesheet" href="style.css">
+    <!-- <link rel="stylesheet" href="console.css"> -->
+    <link rel="stylesheet" href="console2.css">
 </head>
 <body>
     <div class="image-container">
