--- a/Pokemon API Practice/index.html
+++ b/Pokemon API Practice/index.html
@@ -13,7 +13,11 @@
         <input type="text" id="poke-name" placeholder="Enter image name here:">
 
         <!-- Loading text will show while image is being fetched -->
-        <p id="loading-text">Loading...</p>
+        <!-- <p id="loading-text">Loading...</p> -->
+        <p id="loading-text">
+            <span id="loading-text">Loading...</span>
+            <img id="loading-image" src="pokeball.jpeg" alt="Loading Image" style="display: none; opacity: 0;">
+        </p>
         <img id="image" class="lazy" data-src="" src="" alt="Image">
     </div>
     
