update blur, fixing resposive, later display details

--- a/Pokemon API Practice/index.html
+++ b/Pokemon API Practice/index.html
@@ -20,6 +20,16 @@
         </p>
         <img id="image" class="lazy" data-src="" src="" alt="Image">
     </div>
+
+    <div class="details" id="details">
+        <h2>Pokemon Details</h2>
+        <p id="pokemon-name">Name: </p>
+        <p id="pokemon-id">ID: </p>
+        <p id="pokemon-height">Height: </p>
+        <p id="pokemon-weight">Weight: </p>
+        <p id="pokemon-types">Types: </p>
+
+    </div>
     
     <script src="test.js"></script>
 </body>
