update display details err, promise err

--- a/Pokemon API Practice/index.html
+++ b/Pokemon API Practice/index.html
@@ -21,7 +21,7 @@
         <img id="image" class="lazy" data-src="" src="" alt="Image">
     </div>
 
-    <div class="details" id="details">
+    <div class="details" id="details" style="display: none;">
         <h2>Pokemon Details</h2>
         <p id="pokemon-name">Name: </p>
         <p id="pokemon-id">ID: </p>
