update: display details, bug: not display elements after click(switch to another)

--- a/Pokemon API Practice/index.html
+++ b/Pokemon API Practice/index.html
@@ -28,6 +28,13 @@
         <p id="pokemon-height">Height: </p>
         <p id="pokemon-weight">Weight: </p>
         <p id="pokemon-types">Types: </p>
+        <p id="pokemon-subtypes">Subtypes: </p>
+        <p id="pokemon-hp">HP: </p>
+        <p id="pokemon-number">Number: </p>
+        <p id="pokemon-artist">Artist: </p>
+        <p id="pokemon-rarity">Rarity: </p>
+        <p id="pokemon-flavorText">Flavor Text: </p>
+        <p id="pokemon-nationalPokedexNumbers">National Pokedex Numbers: </p>
 
     </div>
     
