some bugs with diff type pokemon

--- a/Pokemon API Practice/index.html
+++ b/Pokemon API Practice/index.html
@@ -25,8 +25,9 @@
         <h2>Pokemon Details</h2>
         <p id="pokemon-name">Name: </p>
         <p id="pokemon-id">ID: </p>
-        <p id="pokemon-height">Height: </p>
-        <p id="pokemon-weight">Weight: </p>
+        <!-- <p id="pokemon-height">Height: </p>
+        <p id="pokemon-weight">Weight: </p> -->
+        <p id="pokemon-envolvesFrom">Evolves From: </p>
         <p id="pokemon-types">Types: </p>
         <p id="pokemon-subtypes">Subtypes: </p>
         <p id="pokemon-hp">HP: </p>
